--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="s1">
             <div class="main-container">
                 <div class="greeting-wrapper">
-                    <h1>Hello, I'm Fariyal Ajrad</h1>
+                    <h1>Hey, I'm Fariyal Ajrad</h1>
                 </div>
                 <div class="intro-wrapper">
                     <div class="nav-wrapper">
@@ -26,7 +26,16 @@
                         </ul>
                     </div>
                     <div class="left-column">
-                        left-column
+                        <img id="profile-pic" src="images/my-pic.jpg" alt="fariyal-ajrad">
+                        <h5 style="text-align: center; line-height: 0;">Personalize Theme</h5>
+                        <div id="theme-options-wrapper">
+                            <div id="light-mode" class="theme-dot"></div>
+                            <div id="blue-mode" class="theme-dot"></div>
+                            <div id="green-mode" class="theme-dot"></div>
+                            <div id="purple-mode" class="theme-dot"></div>
+
+                            <p id="settings-note">Theme options will be saved for<br>your next visit</p>
+                        </div>
                     </div>
                     <div class="right-column">
                         right-column
