Designed the top section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Fariyal Ajrad</title>
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1, minimum-width=1"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&family=Noto+Sans+HK:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -21,7 +21,7 @@
                             <div id="dot-2" class="browser-dot"></div>
                             <div id="dot-3" class="browser-dot"></div>
                         </div>
-                        <ul id="navigation">
+                        <ul id="navigation"> 
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -32,13 +32,20 @@
                             <div id="light-mode" class="theme-dot"></div>
                             <div id="blue-mode" class="theme-dot"></div>
                             <div id="green-mode" class="theme-dot"></div>
-                            <div id="purple-mode" class="theme-dot"></div>
+                            <div id="pink-mode" class="theme-dot"></div>
 
-                            <p id="settings-note">Theme options will be saved for<br>your next visit</p>
                         </div>
+                        <p id="settings-note">*Theme options will be saved for<br>your next visit</p>
                     </div>
                     <div class="right-column">
-                        right-column
+                        <div id="preview-shadow">
+                            <div id="preview">
+                                <h3>About Me</h3>
+                                <p>I'm a student at CBIT, Hyderabad.<br>
+                                I love to code, take pictures and doodle.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
