Add CV to navbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                             <div id="dot-3" class="browser-dot"></div>
                         </div>
                         <ul id="navigation"> 
+                            <li><a href="./Resume.pdf" download>Download CV | </a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -41,8 +42,8 @@
                         <div id="preview-shadow">
                             <div id="preview">
                                 <h3>About Me</h3>
-                                <p>I'm a student at CBIT, Hyderabad.<br>
-                                I love to code, take pictures and doodle.
+                                <p>I'm a student at CBIT, Hyderabad pursuing my B. Tech in Information Technology.<br><br>
+                                I love to code, develop web apps, <a href="https://www.instagram.com/tasveer.ein/" target="_blank">take pictures</a> and <a href="https://www.instagram.com/artsie.uwu/" target="_blank">doodle</a>.
                                 </p>
                             </div>
                         </div>
