Update display pic

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                             <div id="dot-2" class="browser-dot"></div>
                             <div id="dot-3" class="browser-dot"></div>
                         </div>
-                        <ul id="navigation"> 
-                            <li><a href="./Resume.pdf" download>Download CV | </a></li>
+                        <ul id="navigation">
+                            <li><a href="#">Projects</a></li> 
+                            <li><a href="./Resume.pdf" download>Download CV</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -41,7 +42,7 @@
                     <div class="right-column">
                         <div id="preview-shadow">
                             <div id="preview">
-                                <h3>About Me</h3>
+                                <h3>What I Do</h3>
                                 <p>I'm a student at CBIT, Hyderabad pursuing my B. Tech in Information Technology.<br><br>
                                 I love to code, develop web apps, <a href="https://www.instagram.com/tasveer.ein/" target="_blank">take pictures</a> and <a href="https://www.instagram.com/artsie.uwu/" target="_blank">doodle</a>.
                                 </p>
