Add About section and education timeline

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1, minimum-width=1"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -23,7 +24,7 @@
                         </div>
                         <ul id="navigation">
                             <li><a href="#">Projects</a></li> 
-                            <li><a href="./Resume.pdf" download>Download CV</a></li>
+                            <li><a href="./Resume.pdf" download target="_blank">Download CV</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -37,26 +38,86 @@
                             <div id="pink-mode" class="theme-dot"></div>
 
                         </div>
-                        <p id="settings-note">*Theme options will be saved for<br>your next visit</p>
+                        <p id="settings-note">*Theme settings will be saved for<br>your next visit</p>
                     </div>
                     <div class="right-column">
                         <div id="preview-shadow">
                             <div id="preview">
+                                <div id="corner-tl" class="corner"></div>
+                                <div id="corner-tr" class="corner"></div>
                                 <h3>What I Do</h3>
-                                <p>I'm a student at CBIT, Hyderabad pursuing my B. Tech in Information Technology.<br><br>
-                                I love to code, develop web apps, <a href="https://www.instagram.com/tasveer.ein/" target="_blank">take pictures</a> and <a href="https://www.instagram.com/artsie.uwu/" target="_blank">doodle</a>.
-                                </p>
+                                <p>I'm a student and I love to code, develop web apps, <a href="https://www.instagram.com/tasveer.ein/" target="_blank">take pictures</a> and <a href="https://www.instagram.com/artsie.uwu/" target="_blank">doodle</a>.
+                                <div id="corner-br" class="corner"></div>
+                                <div id="corner-bl" class="corner"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                
             </div>
         </section>
 
         <section class="s2">
             <div class="main-container">
-                About
+                <div class="about-wrapper">
+
+                    <div class="about-me">
+                        <h4>More About Me</h4>
+                        <p>I'm a thristy learner and firmly believe that experience is the best teacher.
+                        </p>
+                        <p>I love problem solving, making real-world web applications and being part of a lot of 
+                            communites and clubs.
+                        </p>
+                        <p>In my leisure time, you can find me sketching or solving a problem that tickles my brain.
+                        </p>
+                        <hr>
+                        <h4>TOP EXPERTISE</h4>
+                        <p>I have worked on various projects with the following languages and tools/technologies: 
+                            <a href="./Resume.pdf" download target="_blank">Download CV</a>
+                        </p>
+                        <div class="skills">
+                            <ul>
+                                <li>C, C++</li>
+                                <li>Python</li>
+                                <li>Java</li>
+                                <li>C#</li>
+                                <li>JavaScript</li>
+                            </ul>
+                            <ul>
+                                <li>HTML, CSS, Bootstrap</li>
+                                <li>Node.js</li>
+                                <li>Unity</li>
+                                <li>Pelican</li>
+                                <li>LaTeX</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div style="padding-left: 75px;">
+                        <h4 style="margin-bottom: 0; margin-left: 40px;">Education</h4>
+                        <div class="timeline">
+                            <div class="container left">
+                              <div class="content">
+                                <h5 style="margin-bottom: 0; margin-top: 15px;">CBIT, Hyderabad</h5>
+                                <p>B. Tech in Information Technology
+                                    <br> SGPA: 9.18/10
+                                </p>
+                              </div>
+                            </div>
+                            <div class="container right">
+                              <div class="content">
+                                <h5 style="margin-bottom: 0; margin-top: 15px;">FIITJEE, Hyderabad</h5>
+                                <p>Telangana State Board<br>Score: 980/1000</p>
+                              </div>
+                            </div>
+                            <div class="container left">
+                              <div class="content">
+                                <h5 style="margin-bottom: 0; margin-top: 15px;">Geetanjali High School</h5>
+                                <p>Telangana State Board (SSC)<br>CGPA: 10/10</p>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
             </div>
         </section>
 
